--- a/01_html/01_初识html/09_表头表体表尾.html
+++ b/01_html/01_初识html/09_表头表体表尾.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>表格标签</title>
+    <title>表格表头表尾</title>
     <style>
         table{
             border: 3px solid black;
@@ -65,6 +65,11 @@
                 </td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="5">以上内容仅为小苏个人实例</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
