--- a/01_html/01_初识html/04_图片标签.html
+++ b/01_html/01_初识html/04_图片标签.html
@@ -9,6 +9,6 @@
 <body>
     <!-- img :图片标签 -->
     <!-- alt属性：当图片不显示时，alt提示会显示文字 -->
-    <img src="../../img/1.jpeg" alt="寒冬" width="400px" height="300px" title="欣赏">
+    <img src="../img/1.jpeg" alt="寒冬" width="400px" height="300px" title="欣赏">
 </body>
 </html>
