--- a/01_html/01_初识html/08_表格标签.html
+++ b/01_html/01_初识html/08_表格标签.html
@@ -27,7 +27,7 @@
     <!-- 常用属性 -->
     <hr>
     <h5>表格常用属性</h5>
-    <img src="../../img/表格属性.png" alt="表格属性" title="常用属性表">
+    <img src="../img/表格属性.png" alt="表格属性" title="常用属性表">
     <hr>
     <h5>实例</h5>
     <table>
