--- a/01_html/01_初识html/06_锚点链接.html
+++ b/01_html/01_初识html/06_锚点链接.html
@@ -12,7 +12,7 @@
     <hr>
     <a href="#first">提示部分</a>
     <hr>
-    <img src="../../img/1.jpeg" alt="1">
+    <img src="../img/1.jpeg" alt="1">
     <br>
     <br>
     <br>
@@ -24,7 +24,7 @@
     <br>
     <br>
 
-    <img src="../../img/1.jpeg" alt="2">
+    <img src="../img/1.jpeg" alt="2">
     <hr>
     <br>
     <br>
