--- a/01_html/01_初识html/07_特殊字符.html
+++ b/01_html/01_初识html/07_特殊字符.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <!-- 特殊字符 -->
-   <img src="../../img/特殊字符.png" alt="特殊字符表">
+   <img src="../img/特殊字符.png" alt="特殊字符表">
 </body>
 </html>
