--- a/01_html/01_初识html/11_列表标签.html
+++ b/01_html/01_初识html/11_列表标签.html
@@ -10,7 +10,7 @@
     <!-- 无序列表 ：ul -->
     <!-- <ul></ul>中只能嵌套<li></li>，直接在<ul></ul>标签中输入其他标签是不被允许的 -->
     <!-- <li></li>之间相当于一个容器，可以容纳所有元素 -->
-    <h3>前端有什么</h3>
+    <h3>无序列表</h3>
     <ul>
         <li>Html</li>
         <li>CSS</li>
@@ -19,6 +19,25 @@
     </ul>
     <hr>
     <!-- 有序列表 -->
-    
+    <h3>有序列表</h3>
+    <!-- 有序列表符号 -->
+    <img src="../img/有序列表.png" alt="有序列表">
+    <ol type="a">
+        <li>Html</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Vue</li>
+    </ol>
+    <hr>
+    <h3>自定义列表</h3>
+    <!-- dl ：自定义列表标签 -->
+    <!-- dl标签中只能包含dt和dd -->
+    <!-- dt和dd的数量没有限制，经常是一个dt对应多个dd -->
+    <dl>
+        <dt>联系我们</dt>
+        <dd>新浪微博</dd>
+        <dd>官方微信</dd>
+        <dd>联系电话</dd>
+    </dl>
 </body>
 </html>
