--- a/01_html/02_html5新增标签/02_多媒体标签.html
+++ b/01_html/02_html5新增标签/02_多媒体标签.html
@@ -11,7 +11,7 @@
     <!-- audio ： 音频标签 -->
     <h3>音频标签</h3>
     <p>mp3</p>
-    <audio src="../a.v/大魔王林憬 - 贝加尔湖畔 钢琴.mp3" type="audio/mpeg">mp3</audio>
+    <audio src="../audio&video/大魔王林憬 - 贝加尔湖畔 钢琴.mp3 " type="audio/mpeg">mp3</audio>
     <p>ogg</p>
     <audio src="#" type="audio/ogg">ogg</audio>
     <p>wav</p>
