--- a/02_css/01.1_类选择器画盒子.html
+++ b/02_css/01.1_类选择器画盒子.html
@@ -7,20 +7,27 @@
     <title>类选择器</title>
     <style >
         .red{
-            height: 100px;
-            width: 100px;
+            /* height: 100px;
+            width: 100px; */
             background-color: red;
         }
         .green{
+            /* height: 100px;
+            width: 100px; */
+            background-color:green;
+        }
+        /* 多类名 */
+        .box{
             height: 100px;
             width: 100px;
-            background-color:green;
+            text-align: center;
+
         }
     </style>
 </head>
 <body>
-    <div class="red"></div>
-    <div class="green"></div>
-    <div class="red"></div>
+    <div class="red box">1</div>
+    <div class="green box">2</div>
+    <div class="red box">3</div>
 </body>
 </html>
