--- a/02_css/01_选择器1.html
+++ b/02_css/01_选择器1.html
@@ -12,6 +12,7 @@
             标签选择器选择的是一类标签，而不是单独某一个
             标签选择器无论嵌套关系有多深，都能找到对应的标签 */
         a{
+            font-size: 20px;
             background-color: bisque;
             color: brown;
         }
