--- a/02_css/01_初识css/03_文本属性.html
+++ b/02_css/01_初识css/03_文本属性.html
@@ -34,6 +34,7 @@
         /* text-decoration: underline; */
         /* text-decoration: overline; */
         /* text-decoration: line-through; */
+        font-size: large;
       }
       /* 去除链接的下划线 */
       a{
