--- a/02_css/01_初识css/04_demo1.html
+++ b/02_css/01_初识css/04_demo1.html
@@ -19,7 +19,7 @@
     预报显示，今后三天（3-5日），这一带的高温天气将继续发酵，高温范围以及强度将在4日达到鼎盛，预计北京、天津、
     石家庄、济南等地明天的最高气温有望突破38℃，其中北京和石家庄的最高气温还有望创今年以来的新高。</p>
   <h4>气温41.4℃！地温66.5！北京强势迎七月首个高温日</h4>
-  <p class="img"><img src="../03_img/pic.jpeg" alt="气温图"></p>
+  <p class="img"><img src="../03_img/1.jpeg" alt="气温图"></p>
   <p>今天，华北、黄淮一带的高温持续发酵，截至今天下午2点，陕西北部、山西西南部、河北南部、北京、天津、山东西部、
     河南北部最高气温已普遍超过35℃。大城市中，北京、天津、郑州均迎来高温日。</p>
   <p>在阳光暴晒下，地表温度也逐渐走高。今天下午2点，华北黄淮大部地区的地表温度都在50℃以上，部分地区地表温度甚
