--- a/02_css/01_初识css/03_文本属性.html
+++ b/02_css/01_初识css/03_文本属性.html
@@ -45,10 +45,20 @@
       .indent{
         /* 文本第一行缩进 */
         text-indent: 2em;
+        /*  length 使用固定的长度指定文本的缩进。
+            % 使用包含块宽度的百分比作为缩进。 */
       }
       /* 行间距 */
       p{
         line-height: 60px;
+      }
+      /*  normal：取决于用户端。
+          number：数字乘以元素的字体大小。
+          length：指定长度用于计算高度。
+          %：计算值是给定的百分比值乘以元素计算出的字体大小。 */
+      /* 字符间距 */
+      .spacing {
+        letter-spacing: 12px;
       }
   </style>
 </head>
@@ -61,5 +71,6 @@
     当时阿根廷主帅斯卡洛尼在场边很担心地询问梅西伤情，但是梅西的做法让人感动！</p>
   <p class="indent">为了不拖累球队，梅西选择继续坚持下去同时不暴露自己的伤势，让队友给他脚下球，
     去正式转型为布斯克茨那样的进攻转换节奏器，尤其是完成由守转攻的那一脚关键球，是在用另一种方式继续帮助球队拿到决赛入场券！</p>
+  <p class="spacing">hahahahahahh </p>
 </body>
 </html>
